--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'E660'
 - !lcsh 'Hale, Frederick, 1874-1963'
+- GITenberg
 title: Frederick Hale, a biographical sketch
 url: http://www.gutenberg.org/ebooks/33627
